<resources>
    <string name="app_name">new_app_client</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="code_login">验证码登录</string>
    <string name="pass_login">密码登录</string>
    <string name="find_pass">找回密码</string>
    <string name="boutique_goods_recommend">精品推荐</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_graphic_details">查看图文详情</string>
    <string name="coupon_get_buy">领券购买</string>
    <string name="coupon_price">券后价：</string>
    <string name="coupon_value">优惠券</string>
    <string name="da_tao_ke">大淘客</string>
    <string name="double_line_mark">--</string>
    <string name="double_question_mark">？？</string>
    <string name="double_zero_mark">00</string>
    <string name="editor_recommend">小编推荐</string>
    <string name="filter_close">关</string>
    <string name="filter_open">开</string>
    <string name="free_hipping">包邮</string>
    <string name="gravity_center">center</string>
    <string name="gravity_left">left</string>
    <string name="gravity_right">right</string>
    <string name="hot_news">热卖新品</string>
    <string name="index_deploy_chose_category">选择分类</string>
    <string name="index_new_btn_1">9.9包邮</string>
    <string name="index_new_btn_2">疯抢排行</string>
    <string name="index_new_btn_3">居家日用</string>
    <string name="index_new_btn_4">上线预告</string>
    <string name="index_tab_1">首页</string>
    <string name="index_tab_2">秒杀直播</string>
    <string name="index_tab_3">咚咚抢</string>
    <string name="index_tab_4">购物车</string>
    <string name="index_tab_5">我的</string>
    <string name="kuan">款</string>
    <string name="money_fla">¥</string>
    <string name="money_fla1">￥</string>
    <string name="money_yun">元</string>
    <string name="my_taobao">我的淘宝</string>
    <string name="new_goods_recommend">新品推荐</string>
    <string name="personal_setting_btn_1">浏览记录</string>
    <string name="personal_setting_btn_2">意见反馈</string>
    <string name="personal_setting_btn_3">联系客服</string>
    <string name="personal_setting_btn_4">关于</string>
    <string name="personal_setting_btn_5">清除缓存</string>
    <string name="personal_setting_btn_6">分享APP</string>
    <string name="personal_setting_btn_7">版本更新</string>
    <string name="personal_setting_btn_8">我的足迹</string>
    <string name="point_zero">.0</string>
    <string name="space_three">   </string>
    <string name="taobao_after_sale">退款/售后</string>
    <string name="taobao_cart">购物车</string>
    <string name="taobao_logistics">物流信息</string>
    <string name="taobao_order">淘宝订单</string>
    <string name="today_news_tab_1">上新</string>
    <string name="today_news_tab_10">文娱运动</string>
    <string name="today_news_tab_19_9">19.9包邮</string>
    <string name="today_news_tab_2">女装</string>
    <string name="today_news_tab_3">男装</string>
    <string name="today_news_tab_4">鞋品</string>
    <string name="today_news_tab_5">居家</string>
    <string name="today_news_tab_6">美妆</string>
    <string name="today_news_tab_7">数码家电</string>
    <string name="today_news_tab_8">美食</string>
    <string name="today_news_tab_9">母婴</string>
    <string name="today_news_tab_9_9">9.9包邮</string>
    <string name="tody_new_arrival">今日上新</string>
</resources>
